--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="https://github.com/jlnovais" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="http://linkedin.josenovais.com/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://josenovais.com/linkedin" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://www.nuget.org/profiles/jlnovais" class="icon brands"><span class="label">Nuget</span><img src="images/nuget_small.png" width="20px" alt="" /></a></li>
 						</ul>
 					</nav>
@@ -59,7 +59,7 @@
 								<p>Comming soon...</p>
 							</header>
 							<p>
-								Coming soon... For now you can find documentation for my JN.RabbitMQClient nuget package.
+								Coming soon... eventually....
 							</p>
 
 
@@ -67,153 +67,7 @@
 						</section>
 
 
-						<section>
-							<header>
-								<h1>JN.RabbitMQClient</h1>
-								<p>Simple implementation of RabbitMQ consumer and sender.</p>
-							</header>
-							<p>
-								This is a simple implementation of RabbitMQ consumer and sender. It was initially developed with the aim of learning how to use the official RabbitMQ c# library in simple scenarios. It is in use in several projects in production environments and has proved to be stable. These projects include Rest APIs, windows services, .net Core services (windows and Linux) and others.
-							</p>
 
-							<h2>Current version</h2>
-							<p>
-								Current version is 2.2.0-beta.1
-
-								<h3 style="font-style: italic;"><i>Release notes for current version</i></h3>
-
-								<ul>
-									<li>Update RabbitMQ.Client Library to 6.0.0</li>
-									<li>Upgrade to .NET Standard 2.1</li>
-									<li>Solved bug in connect port</li>
-								</ul>
-							</p>
-							<h2>Install</h2>
-
-							<p>
-								Download the package from NuGet: <br /><br />
-
-								<code class="jn-noBorder">Install-Package JN.RabbitMQClient -version [version number]</code> <br /><br />
-
-								The package is available <a target="_blank" href="https://www.nuget.org/packages/JN.RabbitMQClient/">here</a>.
-
-							</p>
-
-							<h2>Usage</h2>
-							<p>
-								First, you must create the <code class="jn-noBorder">RabbitMqConsumerService</code> and then define delegates for <code class="jn-noBorder">ReceiveMessage</code>, <code class="jn-noBorder">ShutdownConsumer</code> and <code class="jn-noBorder">ReceiveMessageError</code>. The service will start the required number of consumers when <code class="jn-noBorder">StartConsumers</code> is called.
-
-								To use a retry queue, the method <code class="jn-noBorder">StartConsumers</code> should be called with a <code class="jn-noBorder">RetryQueueDetails</code> object.
-							</p>
-
-							<h2>Message processing instructions</h2>
-							<p>
-								The <code class="jn-noBorder">ReceiveMessage</code> delegate receives and processes the message. After the message is processed it returns a message processing instruction.
-							</p>
-							<p>
-								<code class="jn-noBorder">OK</code> - message is considered as successfully processed<br /><br />
-
-								<code class="jn-noBorder">RequeueMessageWithDelay</code> - message is removed from the queue, but sent to a retry queue for later processing (typically with a dead letter configuration)<br /><br />
-
-								<code class="jn-noBorder">IgnoreMessage</code> - message is removed from the queue and ignored<br /><br />
-
-								<code class="jn-noBorder">IgnoreMessageWithRequeue</code> - message is rejected and sent back to the queue
-							</p>
-
-							<h2>Example</h2>
-							<p>
-								Example for consumer and sender services:
-							</p>
-
-<pre>
-<code class="csharp jn-codeLines">class Program
-{
-    static void Main(string[] args)
-    {
-        // consumer
-        var consumerService = new RabbitMqConsumerService(GetBrokerConfigConsumers());
-
-        consumerService.ReceiveMessage += ReceiveMessage;
-        consumerService.ShutdownConsumer += ShutdownConsumer;
-        consumerService.ReceiveMessageError += ReceiveMessageError;
-
-        consumerService.StartConsumers("my consumer");
-
-        // sender
-        var senderService = new RabbitMqSenderService(GetBrokerConfigSender());
-
-        senderService.Send("my message");
-
-        Console.WriteLine("Press any key to exit...");
-        Console.ReadKey();
-
-        consumerService.Dispose();
-    }
-
-    private static IBrokerConfigSender GetBrokerConfigSender()
-    {
-        IBrokerConfigSender configSender = new BrokerConfigSender()
-        {
-            Username = "test",
-            Password = "123",
-            Host = "localhost",
-            VirtualHost = "/",
-            RoutingKeyOrQueueName = "MyTestQueue"
-        };
-        return configSender;
-    }
-
-    private static IBrokerConfigConsumers GetBrokerConfigConsumers()
-    {
-        IBrokerConfigConsumers configConsumers = new BrokerConfigConsumers()
-        {
-            Username = "test",
-            Password = "123",
-            Host = "localhost",
-            VirtualHost = "/",
-            RoutingKeyOrQueueName = "MyTestQueue",
-            ShuffleHostList = false,
-            Port = 0, // use default port
-            TotalInstances = 3
-        };
-        return configConsumers;
-    }
-
-    private static async Task ReceiveMessageError(string routingKeyOrQueueName, string consumerTag, string exchange, string message, string errorMessage)
-    {
-        await Console.Out.WriteLineAsync($"Error: '{consumerTag}' | {errorMessage}");
-    }
-
-    private static async Task ShutdownConsumer(string consumerTag, ushort errorCode, string shutdownInitiator, string errorMessage)
-    {
-        await Console.Out.WriteLineAsync($"Shutdown '{consumerTag}' | {errorCode} | {shutdownInitiator} | {errorMessage}");
-    }
-
-    private static async Task<Constants.MessageProcessInstruction> ReceiveMessage(string routingKeyOrQueueName, string consumerTag, long firstErrorTimestamp, string exchange, string message)
-    {
-        await Console.Out.WriteLineAsync($"Message received from '{consumerTag}': {message}");
-        return Constants.MessageProcessInstruction.OK;
-    }
-}
-</code></pre>
-
-
-							<br />
-
-							<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-							<ins class="adsbygoogle"
-								 style="display:block; text-align:center;"
-								 data-ad-layout="in-article"
-								 data-ad-format="fluid"
-								 data-ad-client="ca-pub-6967643356969607"
-								 data-ad-slot="2908677982"></ins>
-							<script>
-								(adsbygoogle = window.adsbygoogle || []).push({});
-							</script>
-
-							<br />
-
-						</section>
 
 						<!-- Mini Posts -->
 
@@ -232,22 +86,6 @@
 								<h2>JN.RabbitMQClient</h2>
 								<p>Simple implementation of RabbitMQ consumer and sender</p>
 							</a>
-
-
-
-							<div align="center" style="background: #4d565c; margin-left: auto; margin-right: auto;">
-								<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-								<!-- JN.RabbitMQClient -->
-								<ins class="adsbygoogle"
-									 style="display:block"
-									 data-ad-client="ca-pub-6967643356969607"
-									 data-ad-slot="2697118519"
-									 data-ad-format="auto"
-									 data-full-width-responsive="true"></ins>
-								<script>
-									(adsbygoogle = window.adsbygoogle || []).push({});
-								</script>
-							</div>
 							<a target="_blank" href="https://www.nuget.org/packages/JN.MicroHttpServer/" class="accent2">
                                 <h2>JN.Authentication</h2>
                                 <p>Simple Authentication implementation for ASP.NET Core. Basic Authentication Scheme and API Key Custom Authentication Scheme</p>
@@ -258,26 +96,6 @@
                             </a>
 
 						</section>
-						<section>
-						
-<div align="center" style="width: 367px; background-color: red" >
-</div>
-
-<div align="center" style="width: 360px" >
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- JN.RabbitMQClient vertical -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-6967643356969607"
-     data-ad-slot="1963455499"
-     data-ad-format="vertical"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>					
-</div>
-						</section>
-
 	
 
 					</div>
